--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
       </div>
       <div class="remember">
         <label for="remember">
-          <input type="checkbox" id="remember" name="remember" />
+          <input type="checkbox" id="rem" name="remember" />
           remember </label
         ><br /><br />
       </div>
-      <button type="submit">Sign in</button>
+      <div class="button">
+        <button type="submit">Sign in</button>
+      </div>
       <div class="forgot-password">
         <a href="#">Forgot Password ?</a>
       </div>
