chỉnh sửa lần 2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="remember">
         <label for="remember">
-          <input type="checkbox" id="rem" name="remember" />
+          <input type="checkbox" id="remember" name="remember" />
           remember </label
         ><br /><br />
       </div>
